--- a/sixman/pom.xml
+++ b/sixman/pom.xml
@@ -27,6 +27,14 @@
 				 </exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- 트랜잭션 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
