--- a/sixman/pom.xml
+++ b/sixman/pom.xml
@@ -169,6 +169,12 @@
 		    <scope>provided</scope>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.10</version>
+		</dependency>
 		
 	</dependencies>
     <build>
