알람 기능 완료 웹소켓 적용 중

--- a/sixman/pom.xml
+++ b/sixman/pom.xml
@@ -178,6 +178,13 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.4</version>
 		</dependency>
+		
+		<!-- socket -->
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-websocket</artifactId>
+    		<version>${org.springframework-version}</version>
+		</dependency>
 								       
 	</dependencies>
     <build>
