--- a/sixman/pom.xml
+++ b/sixman/pom.xml
@@ -185,6 +185,12 @@
     		<artifactId>spring-websocket</artifactId>
     		<version>${org.springframework-version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.11.3</version>
+		</dependency>
 								       
 	</dependencies>
     <build>
