메인페이지 연동완료 알림음 작업중

--- a/sixman/src/main/webapp/WEB-INF/web.xml
+++ b/sixman/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,21 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error?code=404</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>405</error-code>
+		<location>/error?code=405</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error?code=500</location>
+	</error-page>
 
 	<!-- Processes application requests -->
 	<servlet>
