메인화면 수정, 알림기능 구현완료

--- a/sixman/src/main/webapp/WEB-INF/web.xml
+++ b/sixman/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,10 @@
 		<error-code>500</error-code>
 		<location>/error?code=500</location>
 	</error-page>
+	
+	<error-page>
+		<location>/error?code=ERR</location>
+	</error-page>
 
 	<!-- Processes application requests -->
 	<servlet>
